# ECE30861

./: .coverage  .gitignore  Dockerfile  README.md  cli.py  cli2.py  ece461_fall_2025_openapi_spec.yaml  input2.txt  package-lock.json  package.json  pyproject.toml  run  server.js
backend/: handler.py  requirements.txt  template.yaml
examples/: urls_case01_model_only.txt  urls_case02_dataset_model.txt  urls_case03_dataset_code_model.txt  urls_case04_multi_models.txt  urls_case05_external_dataset_fallback.txt  urls_case07_multiple_code_repos.txt  urls_case08_gitlab_code.txt  urls_case09_shared_dataset_multiple_models.txt  urls_case10_dataset_tree_path.txt  urls_edge01_blank_lines.txt  urls_edge02_invalid_url.txt  urls_edge03_dataset_without_model.txt  urls_edge04_duplicate_models.txt  urls_edge05_model_with_query.txt  urls_edge06_model_with_fragment.txt  urls_edge07_code_only.txt  urls_edge08_non_hf_model_host.txt  urls_edge09_hf_tree_path.txt  urls_edge10_multiple_datasets_per_model.txt  urls_edge11_model_without_dataset.txt  urls_edge12_dataset_linked_after_model.txt  urls_edge13_code_repo_without_protocol.txt  urls_edge14_mixed_hosts.txt  urls_edge15_repeated_code_links.txt  urls_edge16_non_ascii_url.txt  urls_edge17_large_number_of_entries.txt  urls_edge18_model_with_space.txt  urls_edge19_model_with_download_query.txt  urls_edge20_invalid_scheme.txt  urls_edge21_minimal_file.txt  urls_edge22_leading_trailing_spaces.txt  urls_edge23_windows_line_endings.txt  urls_edge24_nonexistent_model.txt  urls_edge25_dataset_with_subdirectory.txt  urls_edge30_mix_of_errors.txt  (+7 more)
(+54 files in other folders)
